<resources>
    <string name="app_name">Rusher</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">SIGN IN</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="invalid_password">Password is too short</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="field_required">This field is required</string>
    <string name="confirm_register">Email not found. Do you want to create an account with that email and password?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="tab_Label1">Pending</string>
    <string name="tab_Label2">Approved</string>
    <string name="background">Background</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_request_status">requestStatus</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="pendingFragment">Pending</string>
    <string name="approvedFragment">Approved</string>
    <string name="pending">Pending</string>
    <string name="approved">Approved</string>

    <string name="country_prompt">Choose a country</string>

    <string-array name="Num_Of_Student">
        <item>4</item>
        <item>6</item>
        <item>10</item>

    </string-array>
    <string name="title_activity_scrolling__menu_">Scrolling_Menu_Activity</string>
    <string name="large_text">large</string>
    <string name="order_now">order_now</string>
    <string name="action_add_favourite">action_add_favourite</string>
    <string name="shuttle">Shuttle</string>
    <string name="leave">leave</string>
    <string name="food">food</string>
    <string name="book">book</string>
    <string name="status">status</string>
    <string name="title_activity_shuttle_service">shuttleService</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_maps">Map</string>
    <string name="default_notification_channel_id">1</string>

</resources>
