<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PendingRequestStatus"
    android:background="#F2E3BA"
    android:id="@+id/constraintLayout">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMain"
        android:layout_width="430dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="11dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayoutMain"
        android:layout_width="436dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="#F2E3BA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.617"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarMain"
        app:tabSelectedTextColor="#33444E"
        app:tabTextColor="@android:color/black"
        >

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabShuttle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@color/colorPrimary"
            android:text="@string/shuttle"
            app:tabSelectedTextColor="@android:color/white"
            app:tabTextColor="@android:color/black" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabLeave"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:text="@string/leave" />
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabFood"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:text="@string/food" />
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabBook"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:text="@string/book" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPagerMain"
        android:layout_width="367dp"
        android:layout_height="559dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayoutMain">

    </androidx.viewpager.widget.ViewPager>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="381dp"
        android:layout_height="595dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.818" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigationView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#A33A47"
        app:itemBackground="@color/colorPrimary2"
        app:itemIconTint="#FFFFFF"
        app:itemTextColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/navigation" />

</androidx.constraintlayout.widget.ConstraintLayout>